--- a/CityProject/mainwindow.ui
+++ b/CityProject/mainwindow.ui
@@ -13,7 +13,69 @@
   <property name="windowTitle">
    <string>MyCity Project</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>160</y>
+      <width>181</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>Concentrique</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>100 % Centre-ville</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>100 % Périphérie</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>100 % Zone d'activités</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Personnalisée ...</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>160</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Surface de la ville :</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>200</y>
+      <width>111</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Générer ville !</string>
+    </property>
+   </widget>
+  </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
